Cabal-Version:      2.4
Name:               cardanowallet
Version:            0.1.0.0
Author:             Sean
Maintainer:         domy2018@protonmail.com
Build-Type:         Simple
Copyright:          © 2022 Sean
License:            Apache-2.0
License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     CardanoWallet
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , random
                     , word8
                     , bytestring
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
